--- a/webcontent/index.html
+++ b/webcontent/index.html
@@ -3,12 +3,18 @@
   <link rel="stylesheet" type="text/css" href="css/index.css">
   <link rel="stylesheet" type="text/css" href="css/easy-autocomplete.themes.min.css">
   <link rel="stylesheet" type="text/css" href="css/easy-autocomplete.min.css">
+  <link rel="stylesheet" type="text/css" href="css/jquery.dataTables.min.css">
 </head>
 <body>
 <h1>Flight Search Engine</h1>
 <div class="-body-container">
 	<div class="left-panel">
 		<form name="search-form">
+
+      <div class="ui-widget">
+         <select name="airline-sel" id="airline-sel"></select>
+ 				<label for="airline-txt">Select an airline</label>
+ 			</div>
 
 			<div class="ui-widget">
 				<input name="from-txt" id="from-txt" placeholder="Enter Origin City"/>
@@ -26,11 +32,15 @@
 			</div>
 
 			<div class="input-cont">
-				<button  name="search-btn" id="search-btn">Search</button>
+				<button name="search-btn" id="search-btn">Search</button>
 			</div>
 		</form>
+    <div>
+      <table id="result" class="display compact" width="100%"></table>
+    </div>
 </div>
 <script src="js/jquery.min.js"></script>
 <script src="js/jquery.easy-autocomplete.min.js"></script>
+<script src="js/jquery.dataTables.min.js"></script>
 <script src="js/index.js"></script>
 </body>
